Finish html structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <script src="scritp.js" defer></script>
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div class="calculator-container">
+        <div class="display">0</div>
+            <div class = "buttons-container">
+                <button class="grey-buttons clear-button">C</button>
+                <button class="operation-button grey-buttons">+/-</button>
+                <button class="operation-button grey-buttons">%</button>
+                <button class="operation-button orange-buttons">&#247</button>
+
+                <button class="digit-button dark-grey-buttons btn-7">7</button>
+                <button class="digit-button dark-grey-buttons btn-8">8</button>
+                <button class="digit-button dark-grey-buttons btn-9">9</button>
+                <button class="operation-button orange-buttons">&times</button>
+
+                <button class="digit-button dark-grey-buttons btn-4">4</button>
+                <button class="digit-button dark-grey-buttons btn-5">5</button>
+                <button class="digit-button dark-grey-buttons btn-6">6</button>
+                <button class="operation-button orange-buttons">-</button>
+
+                <button class="digit-button dark-grey-buttons btn-4">1</button>
+                <button class="digit-button dark-grey-buttons btn-5">2</button>
+                <button class="digit-button dark-grey-buttons btn-6">3</button>
+                <button class="operation-button orange-buttons">+</button>
+
+                <button class="dark-grey-buttons btn-0">0</button>
+                <button class="dark-grey-buttons dot-button">.</button>
+                <button class="equals-button orange-buttons">=</button>
+            </div>
+    </div>
 </body>
 </html>
